# site-specific-paragliding-airflow-multiagent

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  render.yaml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/agents/: base.py  cloud_agent.py  flight_history_agent.py  local_knowledge_agent.py  negotiation_agent.py  risk_agent.py  terrain_agent.py  weather_agent.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/api/: deps.py  main.py
backend/api/routes/: agents.py  clouds.py  forecast.py  knowledge.py  planning.py  replay.py  site.py  terrain.py  tracks.py  unity.py
backend/config/: settings.py
backend/config/site_profiles/: eagle_ridge.json
backend/data_ingestion/clouds/: cloud_provider_base.py  mock_cloud_provider.py
backend/data_ingestion/flights/: gpx_parser.py  igc_parser.py
backend/data_ingestion/terrain/: dem_loader.py  terrain_analyzer.py
backend/data_ingestion/weather/: mock_provider.py  open_meteo.py  provider_base.py
backend/db/: models.py  session.py
backend/knowledge/: ingestion.py  retrieval.py  schema.py
backend/ml/: calibration.py  features.py  launch_timing.py  thermal_scorer.py
backend/services/: planning_service.py  replay_service.py  seed.py
backend/spatial/: overlay_builder.py  terrain_features.py
backend/tests/: conftest.py
backend/tests/test_agents/: test_negotiation_agent.py  test_risk_agent.py  test_terrain_agent.py  test_weather_agent.py
backend/tests/test_api/: test_planning_endpoint.py
backend/tests/test_ingestion/: test_igc_parser.py
docs/: architecture.md  data_schema.md  expert_interview_guide.md  (+6 more)
(+35 files in other folders)
